--- a/src/main/resources/view/item_form.fxml
+++ b/src/main/resources/view/item_form.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.citroessentional.controller.ItemFormController">
+<AnchorPane fx:id="root" prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ItemFormController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" height="670.0" layoutX="1.0" layoutY="5.0" opacity="0.61" stroke="#fcfcfc" strokeType="INSIDE" style="-fx-background-color: #ffbc00;" width="1031.0">
          <fill>
